# ray

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  dependabot-auto-merge.yml  rust-clippy.yml
diagrams/: architecture.drawio
network_config/: boot_enr.yaml  config.yaml
pcap/: Cargo.toml
pcap/src/: main.rs
src/: beacon_chain.rs  behaviour.rs  bootstrap.rs  config.rs  discovery.rs  identity.rs  main.rs  network.rs  peer_db.rs  signal.rs  types.rs
src/discovery/: behaviour.rs  enr.rs  mod.rs
src/peer_manager/: behaviour.rs  mod.rs
src/rpc/: behavior.rs  behaviour.rs  codec.rs  error.rs  handler.rs  message.rs  mod.rs  protocol.rs  status.rs
src/sync/: chain_collection.rs  mod.rs  network_context.rs  range_sync.rs  syncing_chain.rs
