[package]
name = "ray"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Packages that are part of lighthouse (e.g. types, eth2_ssz) are used in this package.
# NOTE: we are using the forked one due to the package visibility.
# see https://github.com/ackintosh/lighthouse/pull/4

[dependencies]
delay_map = "0.3.0"
discv5 = "0.2.2"
futures = "0.3.28"
hex = "0.4.3"
libp2p = { version = "0.50.0", default-features = false, features = ["dns", "tokio", "ecdsa", "noise", "mplex", "secp256k1", "tcp", "yamux"] }
lru = "0.10.0"
parking_lot = "0.12.1"
primitive-types = "0.12.1"
serde_yaml = "0.9.21"
smallvec = "1.10.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-io-timeout = "1.2.0"
# NOTE: Build fails if we upadte tokio-util >= 0.7.0.
# -> RpcProtocol::upgrade_inbound()
# https://github.com/tokio-rs/tokio/blob/master/tokio-util/CHANGELOG.md
tokio-util = { version = "=0.6.10", features = ["codec", "compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"
void = "1.0.2"

# Switched to the forked version so use the codec implemented in lighthouse.
# SEE: https://github.com/ackintosh/lighthouse/compare/unstable...ackintosh:lighthouse:publish-codec
lighthouse_network = { git = "https://github.com/ackintosh/lighthouse.git", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }
network = { git = "https://github.com/ackintosh/lighthouse.git", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }
beacon_chain = { git = "https://github.com/ackintosh/lighthouse.git", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }
client = { git = "https://github.com/ackintosh/lighthouse.git", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }
environment = { git = "https://github.com/ackintosh/lighthouse.git", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }
eth2_network_config = { git = "https://github.com/ackintosh/lighthouse.git", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.2"
slot_clock = { git = "https://github.com/ackintosh/lighthouse", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }
types = { git = "https://github.com/ackintosh/lighthouse.git", rev = "fe3bec9f46f4ec360cb4d231c9b0825d00674ef4" }

[build-dependencies]
zip = "0.6.6"

[patch]
[patch.crates-io]
# SEE: https://github.com/sigp/lighthouse/blob/230168deffc0adcae90e53256d42942b3ae97d93/Cargo.toml#L95
warp = { git = "https://github.com/macladson/warp", rev="7e75acc368229a46a236a8c991bf251fe7fe50ef" }

# https://github.com/sigp/lighthouse/blob/c11638c36c25f3af910eecd33a6e45d1caa99f1f/Cargo.toml#L93-L98
[patch."https://github.com/ralexstokes/mev-rs"]
mev-rs = { git = "https://github.com/ralexstokes//mev-rs", rev = "7813d4a4a564e0754e9aaab2d95520ba437c3889" }
[patch."https://github.com/ralexstokes/ethereum-consensus"]
ethereum-consensus = { git = "https://github.com/ralexstokes//ethereum-consensus", rev = "9b0ee0a8a45b968c8df5e7e64ea1c094e16f053d" }
[patch."https://github.com/ralexstokes/ssz-rs"]
ssz-rs = { git = "https://github.com/ralexstokes//ssz-rs", rev = "adf1a0b14cef90b9536f28ef89da1fab316465e1" }
