[package]
name = "ray"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Packages that are part of lighthouse (e.g. types, eth2_ssz) are used in this package.
# NOTE: we are using the forked one due to the package visibility.
# see https://github.com/ackintosh/lighthouse/pull/4

[dependencies]
delay_map = "0.4.1"
discv5 = "0.9.1"
futures = "0.3.31"
hex = "0.4.3"
home = "0.5.11"
libp2p = { version = "0.55.0", default-features = false, features = ["dns", "tokio", "ecdsa", "noise", "macros", "secp256k1", "tcp", "yamux"] }
lru = "0.14.0"
parking_lot = "0.12.4"
serde_yaml = "0.9.34"
smallvec = "1.15.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-io-timeout = "1.2.0"
# NOTE: Build fails if we upadte tokio-util >= 0.7.0.
# -> RpcProtocol::upgrade_inbound()
# https://github.com/tokio-rs/tokio/blob/master/tokio-util/CHANGELOG.md
tokio-util = { version = "0.7.15", features = ["codec", "compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Switched to the forked version so use the codec implemented in lighthouse.
# SEE: https://github.com/ackintosh/lighthouse/compare/stable...ackintosh:lighthouse:publish-codec
lighthouse_network = { git = "https://github.com/ackintosh/lighthouse.git", rev = "a0595c4204d73bb02c43dbf23b706f7acf6e39fd" }
beacon_chain = { git = "https://github.com/ackintosh/lighthouse.git", rev = "a0595c4204d73bb02c43dbf23b706f7acf6e39fd" }
client = { git = "https://github.com/ackintosh/lighthouse.git", rev = "a0595c4204d73bb02c43dbf23b706f7acf6e39fd" }
environment = { git = "https://github.com/ackintosh/lighthouse.git", rev = "a0595c4204d73bb02c43dbf23b706f7acf6e39fd" }
eth2_network_config = { git = "https://github.com/ackintosh/lighthouse.git", rev = "a0595c4204d73bb02c43dbf23b706f7acf6e39fd" }
ethereum_ssz = "0.8.3"
types = { git = "https://github.com/ackintosh/lighthouse.git", rev = "a0595c4204d73bb02c43dbf23b706f7acf6e39fd" }

[build-dependencies]
zip = "2.6.1"
